deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-app-svc
spec:
  type: LoadBalancer
  selector:
    app: main-app
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 5010
